fix player alignemnet on ultrawide

--- a/_sass/music.scss
+++ b/_sass/music.scss
@@ -87,14 +87,17 @@ article.music {
 #song-player {
   position: fixed;
   bottom: 0;
-  left: 0;
   z-index: 1;
 
   // Same than body. TODO fix for wide screen
   width: 70%;
   padding-left: 15%;
   padding-right: 15%;
-  max-width: $paragraphLength;
+
+  // equivalent of body's margin auto centering
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 1400px;
   @media (max-width: $breakpoint) {
     width: 84%;
     padding-left: 8%;
@@ -109,13 +112,14 @@ article.music {
     // top: 0;
     // right: 0;
     // left: 0;
-    // transform: translateY(-100%);
+    // transform: translateX(-50%), translateY(-100%);
     height: 5rem;
     background: linear-gradient(rgba(255, 255, 255, 0), $background);
   }
 
   pointer-events: none;
   .inner {
+    max-width: $paragraphLength;
     background: $background;
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -128,14 +132,14 @@ article.music {
   }
 
   // Animate in
-  transform: translateY(0%);
+  transform: translateX(-50%) translateY(0%);
   opacity: 1;
   transition-property: transform, opacity;
   transition-duration: 0.4s;
   transition-timing-function: ease-out;
   &.hidden {
     opacity: 0;
-    transform: translateY(20%);
+    transform: translateX(-50%) translateY(20%);
     .inner {
       pointer-events: none;
     }
